<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    tools:context=".NewMastermind">

    <Button
        android:id="@+id/easy"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/bialy"
        android:textSize="40sp"
        android:background="@color/turkus"
        android:layout_alignParentStart="true"
        android:text="@string/button_easy"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/bialy"
        android:textSize="40sp"
        android:background="@color/zielony"
        android:layout_below="@+id/easy"
        android:text="@string/button_medium"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/hard"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/bialy"
        android:textSize="40sp"
        android:background="@color/czerowny"
        android:layout_below="@+id/medium"
        android:text="@string/button_hard"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/extreme"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/bialy"
        android:textSize="40sp"
        android:background="@color/ciemny_szary"
        android:layout_below="@+id/hard"
        android:text="@string/button_extreme"
        android:onClick="onClick"
        />

</RelativeLayout>
